--- a/apps/tailor-e2e/project.json
+++ b/apps/tailor-e2e/project.json
@@ -18,12 +18,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/tailor-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/tailor-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["tailor"]
+  "implicitDependencies": [
+    "tailor"
+  ]
 }
