--- a/apps/tailor/project.json
+++ b/apps/tailor/project.json
@@ -5,7 +5,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/tailor",
         "index": "apps/tailor/src/index.html",
@@ -13,8 +15,14 @@
         "polyfills": "apps/tailor/src/polyfills.ts",
         "tsConfig": "apps/tailor/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/tailor/src/favicon.ico", "apps/tailor/src/assets"],
-        "styles": ["apps/tailor/src/styles.scss"],
+        "assets": [
+          "apps/tailor/src/favicon.ico",
+          "apps/tailor/src/assets"
+        ],
+        "styles": [
+          "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+          "apps/tailor/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -74,12 +82,17 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/tailor/**/*.ts", "apps/tailor/**/*.html"]
+        "lintFilePatterns": [
+          "apps/tailor/**/*.ts",
+          "apps/tailor/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/tailor"],
+      "outputs": [
+        "coverage/apps/tailor"
+      ],
       "options": {
         "jestConfig": "apps/tailor/jest.config.ts",
         "passWithNoTests": true
