--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@nrwl/workspace": "14.6.5",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
     "@typescript-eslint/parser": "~5.33.1",
     "cypress": "^10.2.0",
