--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "~14.2.0",
     "@angular/cdk": "^14.2.1",
     "@angular/common": "~14.2.0",
     "@angular/compiler": "~14.2.0",
     "@angular/core": "~14.2.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~14.2.0",
     "@angular/material": "^14.2.1",
     "@angular/platform-browser": "~14.2.0",
@@ -26,9 +28,14 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nrwl/angular": "14.6.5",
     "angular-gridster2": "^14.1.1",
+    "firebase": "^9.10.0",
+    "firebase-admin": "^11.0.1",
+    "firebaseui": "^6.0.1",
+    "firebaseui-angular": "^6.1.2",
     "ngx-print": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
+    "save": "^2.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
